Set correct mouse-pointer for jumplist.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -896,6 +896,7 @@ div.v-subheader {
  display: flex;
  justify-content: center;
  align-items: center;
+ cursor:pointer;
 }
 
 @media screen and (max-width: 350px) {
